Completed code and coupon discounts.

--- a/XOSkinWebApp/Areas/Administration/Views/DiscountCodes/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/DiscountCodes/Create.cshtml
@@ -100,12 +100,12 @@
         <span asp-validation-for="DiscountGlobalOrderDollars" class="text-danger"></span>
       </div>
       <div class="form-group">
-        <label asp-for="ValidFrom" class="control-label font-weight-bolder"></label>
+        <label asp-for="ValidFrom" class="control-label font-weight-bolder">Valid From</label>
         <input asp-for="ValidFrom" class="form-control" />
         <span asp-validation-for="ValidFrom" class="text-danger"></span>
       </div>
       <div class="form-group">
-        <label asp-for="ValidTo" class="control-label font-weight-bolder"></label>
+        <label asp-for="ValidTo" class="control-label font-weight-bolder">Valid To</label>
         <input asp-for="ValidTo" class="form-control" />
         <span asp-validation-for="ValidTo" class="text-danger"></span>
       </div>
