Additions and fixes to Discount Coupons and Codes.

--- a/XOSkinWebApp/Areas/Administration/Views/DiscountCodes/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/DiscountCodes/Index.cshtml
@@ -80,7 +80,8 @@
       paging: true,
       searching: true,
       sort: true,
-      bInfo: true
+      bInfo: true,
+      order: [[5, "desc"]]
     });
 
     new $.fn.dataTable.Responsive(table, {
