--- a/XOSkinWebApp/Areas/Administration/Views/DiscountCoupons/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/DiscountCoupons/Create.cshtml
@@ -9,7 +9,7 @@
 
 <h4>Discount Coupon</h4>
 <hr />
-<form asp-action="Create">
+<form asp-action="Create" enctype="multipart/form-data" id="create">
   <div asp-validation-summary="ModelOnly" class="text-danger"></div>
   <div class="row">
     <div class="col-md-4">
@@ -18,6 +18,11 @@
           <input class="form-check-input font-weight-bolder" asp-for="Active" checked />
           @Html.DisplayNameFor(model => model.Active)
         </label>
+      </div>
+      <div class="form-group">
+        <label asp-for="ImageLarge" class="control-label font-weight-bolder" id="image-large">Discount Coupon Image File (Only .jpg or .jpeg files admitted.)<br />Works best with square (1:1) aspect ratio images.<br /> Preferred Image Size is 300px by 300px.</label>
+        <input asp-for="ImageLarge" class="btn btn-outline-dark" type="file" /><br />
+        <span asp-validation-for="ImageLarge" class="text-danger"></span>
       </div>
       <div class="form-group">
         <label asp-for="Name" class="control-label font-weight-bolder"></label>
