--- a/XOSkinWebApp/Areas/Administration/Views/DiscountCoupons/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/DiscountCoupons/Index.cshtml
@@ -81,7 +81,8 @@
       paging: true,
       searching: true,
       sort: true,
-      bInfo: true
+      bInfo: true,
+      order: [[5, "desc"]]
     });
 
     new $.fn.dataTable.Responsive(table, {
